# Mistic-Engine

./: CMakeLists.txt  main.cpp  toolchain-linux.cmake  toolchain-mingw64.cmake
src/: engine.h
src/render/: mesh.cpp  mesh.h  render.cpp  render.h
src/window/: window.cpp  window.h
